# cs-6120-project

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: bastoul.c  bastoul23.mlir  bastoul24.mlir  bastoul38.mlir  gemm.c  gemm.mlir  pascal.c  pascal.mlir
src/: CMakeLists.txt  dep.cpp  dep.hpp  is.cpp  is.hpp  main.cpp  scp.cpp  scp.hpp  utils.hpp
tools/: mat.py  plot.py
